raffia/tests/error/scss/value/interpolation/semicolon.snap
---
source: raffia/tests/error.rs
---
error: expect token `}`, but found `;`
  ┌─ semicolon.scss:1:14
  │
1 │ $foo: #{bar();};
  │              ^


